--- a/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
+++ b/src/sections/final_cheatsheet/fin_Atoms_Solids.tex
@@ -29,11 +29,13 @@ and each solution occupies
 \end{equation*}
 
 \subsubsection{Fermi Energy}
-For a solid with $N$ electrons with $q$ electrons each
+\newpar{}
+For a solid with $N$ atoms with $q$ valence electrons each the total volume
 \noindent\begin{equation*}
     \frac{1}{8}\cdot\underbrace{\frac{4}{3}\pi k_F^3}_{\textsf{vol. sphere}} = \underbrace{\frac{Nq}{2}}_{\frac{\textsf{\# electrons}}{\mathsf{spin}}}\cdot \underbrace{\frac{\pi^3}{V}}_{\textsf{vol. per state}}
 \end{equation*}
-the Fermi wavenumber and its energy can be found:
+is occupied in k-space until all electron states are occupied.\\
+The Fermi wave number and its energy can then be found:
 \noindent\begin{equation*}
     k_F  = {\left(\frac{3\pi^2 N q}{V}\right)}^{\frac{1}{3}}, \qquad                  
     E_F  = \frac{\hbar^2}{2m}{\left(\frac{3\pi^2 N q}{V}\right)}^{\frac{2}{3}}
