--- a/src/sections/final_cheatsheet/fin_SE.tex
+++ b/src/sections/final_cheatsheet/fin_SE.tex
@@ -83,7 +83,7 @@ A \textit{free particle} propagates in space as a \textbf{wave packet} and its w
 \begin{itemize}
     \item A free particle can have any positive energy $E$.
     \item There is no free particle with a definite energy.
-          % \item $\frac{1}{\sqrt{2\pi}}$ plays the role of $c_n$ from the discrete superposition case.
+    \item $\frac{1}{\sqrt{2\pi}}\phi(k)dk$ plays the role of $c_n$ from the discrete superposition case.
     \item Separable solutions do not represent physical states, therefore $\notin$ Hilbert space.
     \item The particle carries a range of $k$
 \end{itemize}
