fixed typos, added fin_Multiple_Particles

--- a/src/sections/04_Atoms_Solids.tex
+++ b/src/sections/04_Atoms_Solids.tex
@@ -133,6 +133,7 @@ Remarks
 
 \paragraph[Exchange Symmetry of psi]{Exchange Symmetry of Indistinguishable Particles $\psi_{\pm}$}
 
+\newpar{}
 \ptitle{Exchange Operator}
 
 The exchange operator swaps two particles and it's eigenvalues describe the (anti)symmetry
@@ -609,7 +610,7 @@ the quantization of $K$ can be found:
 
 \ptitle{Potential}
 
-In its simples form, the potential can be modeled with a \textit{Dirac-comb}:
+In its simplest form, the potential can be modeled with a \textit{Dirac-comb}:
 \noindent\begin{equation*}
     V(x)=\alpha\sum_{j=0}^{N-1}\delta(x-ja)
 \end{equation*}
