--- a/src/sections/05_Approx_Methods.tex
+++ b/src/sections/05_Approx_Methods.tex
@@ -8,7 +8,7 @@
 \ptitle{Variational principle}
 \begin{itemize}
     \item Doesn't need previous knowledge of energies or states but, in turn, can also not use it to yield a broad range of results.
-    \item Provides an upper bound for the ground state energy (any some information on the 1st excited state) using trial functions.
+    \item Provides an upper bound for the ground state energy (and some information on the 1st excited state) using trial functions.
 \end{itemize}
 
 \subsection{Time-Independent Perturbation Theory}
@@ -28,7 +28,7 @@ with an adjustable dummy parameter $\lambda$ (finally set to $1$). The perturbed
             1&0&0\\
             0&1&0\\
             0&0&2
-        \end{bmatrix}}_{\mathbf{H}^(0)}
+        \end{bmatrix}}_{\mathbf{H}^{(0)}}
         + \underbrace{V_0 \varepsilon
         \begin{bmatrix}
             -1&0&0\\
@@ -74,7 +74,7 @@ The perturbed total energy and state can then be approximated by a power series 
     E_{n}    & =E_{n}^{(0)}+\lambda E_{n}^{(1)}+\lambda^{2}E_{n}^{(2)}+\cdots         \\
     \psi_{n} & =\psi_{n}^{(0)}+\lambda\psi_{n}^{(1)}+\lambda^{2}\psi_{n}^{(2)}+\cdots
 \end{align*}
-Where $E_{n}^{(k)}$, $\psi_{n}^{(k)}$ are \textit{kth-order  corrections}. Rearranging and \textit{testing} with $\psi_{n}^{(0)}$ yields the
+Where $E_{n}^{(k)}$, $\psi_{n}^{(k)}$ are \textit{kth-order  corrections}. Rearranging the perturbed TISE and \textit{testing} with $\psi_{n}^{(0)}$ yields the
 
 \newpar{}
 \ptitle{1st and 2nd Order Approximations}
