fixed typo in "de Broglie". Note the haircut: https://de.wikipedia.org/wiki/Louis_de_Broglie#/media/Datei:Broglie_Big.jpg

--- a/src/sections/01_Introduction.tex
+++ b/src/sections/01_Introduction.tex
@@ -40,7 +40,7 @@ which means that the average thermal energy is too low for high frequency modes 
 \end{itemize}
 
 \subsubsection{Wave-Particle Duality}
-The \textit{de Briogle relation} connects the wavelength $\lambda$ with the momentum $p$ for both light and matter
+The \textit{de Broglie relation} connects the wavelength $\lambda$ with the momentum $p$ for both light and matter
 \begin{equation*}
     p=\frac{h}{\lambda}=\frac{2\pi\hbar}{\lambda}=\hbar\cdot k
 \end{equation*}
