--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -152,7 +152,7 @@ Ideal gas law:
 \noindent\begin{align*}
     PV & =nRT=n k_B T                                             \\
     \text{with}                                                   \\
-    n  & =\frac{N_{particles}}{N_A} \text{ ($n$: number of Mols)} \\
+    n  & =\frac{N_{particles}}{N_A} \text{ ($n$: number of Moles)} \\
     R  & =N_A k_B \text{ universal gas constant}
 \end{align*}
 Distance between atoms:
