--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -137,6 +137,10 @@ each with a corresponding energy (\textbf{quantized})
 \begin{center}
     \includegraphics[width = 0.4\linewidth]{ISW.png}
 \end{center}
+Calculations can be simplified by substituting
+\begin{equation*}
+    \omega= \frac{\pi^2 \hbar}{2m a^2},\quad \frac{E_n}{\hbar} = \omega n^2
+\end{equation*}
 
 \textbf{Remarks:}
 \begin{itemize}
