--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -284,7 +284,7 @@ As for $\hat{x}$ one can also show for $\hat{p}$ that
 
 \textbf{Remarks}:
 \begin{itemize}
-    \item The previous statements hold for two subsequent measurements, if for example, a third measurement is made, the compatability of the second and third have to be evaulated
+    \item The previous statements hold for two subsequent measurements, if for example, a third measurement is made, the compatibility of the second and third have to be evaulated
     \item Check the table of commutators in Appendix\ \ref{comm}
 \end{itemize}
 
