--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -270,7 +270,7 @@ After a measurement of an observable, the wave function \textbf{collapses} into 
 
 \textbf{Remarks}:
 \begin{itemize}
-    \item The previous statements hold for two subsequent measurements, if for example, a third measurement is made, the compatability of the second and third have to be evaulated.
+    \item The previous statements hold for two subsequent measurements, if for example, a third measurement is made, the compatibility of the second and third have to be evaulated.
     \item $\langle[\hat{A},\hat{B}]\rangle=\langle\Psi|\hat{A}\hat{B}\Psi\rangle-\langle\Psi|\hat{B}\hat{A}\Psi\rangle$
 \end{itemize}
 
