--- a/src/sections/final_cheatsheet/fin_SE.tex
+++ b/src/sections/final_cheatsheet/fin_SE.tex
@@ -112,6 +112,11 @@ A wavepacket consisting of infinitely many waves has a different \textit{group v
     \includegraphics[width = 0.4\linewidth]{ISW.png}
 \end{center}
 
+Calculations can be simplified by substituting
+\begin{equation*}
+    \omega = \frac{\pi^2 \hbar}{2m a^2},\quad \frac{E_n}{\hbar} = \omega n^2
+\end{equation*}
+
 \textbf{Remarks:}
 \begin{itemize}
     \item Solutions alternate between \textit{odd} and \textit{even} starting from $\psi_1$: \textit{odd}
