--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -187,7 +187,7 @@ with
     |\mathbf{L}|=\sqrt{L_{x}^{2}+L_{y}^{2}+L_{z}^{2}}
 \end{equation*}
 
-See Subsection~\ref{ang_mom_comm} for compatability.
+See Subsection~\ref{ang_mom_comm} for compatibility.
 
 \subsubsection{Ladder Operators for Angular Momentum}
 
