--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -79,6 +79,7 @@ The expectation value of the energy of a particle in a general state is given by
 \ptitle{Remarks:}
 \begin{itemize}
     \item In other words, $\Psi_n$ \textit{says} where a particle most likely \textit{is} when it has the energy $E_n$. So $\Psi$ tells us that a particle is in serval $\Psi_n$'s with several $E_n$'s at the same time. A Measurement will \textbf{collapse} $\Psi$ into one of the $\Psi_n$'s.
+    \item The separation constant $E$ must be \textbf{real} for the wave function to stay normalized.
     \item In contrast to the case of stationary states, probabilities and expectations of the general solution (a linear combination of stationary states) are in general \textbf{not} time-independent.
     \item As $c_n$ are independent on time, the probability to get a certain energy and $\langle H\rangle$ are constant in time (energy conservation).
 \end{itemize}
@@ -260,6 +261,14 @@ For an arbitrary state $n$ the next state is given by
 \end{align*}
 
 \includegraphics[width=\linewidth]{harmonic_oscillator.png}
+
+\newpar{}
+\ptitle{Specific Excited States}
+
+\begin{align*}
+    \psi_{1}(x) & ={\left(\frac{m\omega}{\pi\hbar}\right)}^{\frac{1}{4}}\sqrt{\frac{2m\omega}{\hbar}}xe^{-\left(\frac{m\omega}{2\hbar}\right)x^{2}}                      \\
+    \psi_{2}(x) & =\frac{1}{\sqrt{2}}\Big(\frac{m\omega}{\pi\hbar}\Big)^{\frac{1}{4}}\Big(\frac{2m\omega}{\hbar}x^{2}-1\Big)e^{-\Big(\frac{m\omega}{2\hbar}\Big)x^{2}}
+\end{align*}
 
 \ptitle{Hermite Polynomial Form}
 
