--- a/src/sections/final_cheatsheet/fin_Math_Tools.tex
+++ b/src/sections/final_cheatsheet/fin_Math_Tools.tex
@@ -53,8 +53,8 @@ Evaluate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$ and not $(\widehat{
 \ptitle{Canonical Commutation Relations}
 
 \noindent\begin{align*}
-    \left[\widehat{x},\widehat{p}_x\right]  & = i\hbar  & \left[\widehat{x}, \widehat{y}\right]     & = 0 \\
-    \left[\widehat{p}_x, \widehat{x}\right] & = -i\hbar & \left[\widehat{p}_x, \widehat{p}_y\right] & = 0
+    \left[\widehat{x},\widehat{p}_x\right]  & = i\hbar & \left[\widehat{x}, \widehat{y}\right]     & = 0 \\
+    \left[\widehat{x}, \widehat{p}_y\right] & = 0      & \left[\widehat{p}_x, \widehat{p}_y\right] & = 0
 \end{align*}
 \ptitle{Useful Commutators}
 
