--- a/src/sections/final_cheatsheet/fin_SE_3D.tex
+++ b/src/sections/final_cheatsheet/fin_SE_3D.tex
@@ -71,9 +71,10 @@ with
 %     \nabla^2        & =\frac{1}{r^2}\frac{\partial}{\partial r}\left(r^2\frac{\partial}{\partial r}\right) + \frac{1}{r^2\sin(\theta)}\frac{\partial}{\partial\theta}\left(\sin(\theta)\frac{\partial}{\partial \theta}\right) \ldots \\
 %                     & + \frac{1}{r^2\sin^2(\theta)}\left(\frac{\partial^2}{\partial \phi^2}\right)
 % \end{align*}
-\begin{equation*}
-    d^3\mathbf{r} = dx\:dy\:dz = r^2\sin(\theta)dr\:d\theta\:d\phi
-\end{equation*}
+\begin{align*}
+    d^2\mathbf{r} & = \sin(\theta)d\theta\:d\phi                     \\
+    d^3\mathbf{r} & = dx\:dy\:dz = r^2\sin(\theta)dr\:d\theta\:d\phi
+\end{align*}
 
 \textbf{Normalization}
 
