changed TBD to TODO, minor corrections

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -104,7 +104,7 @@ which means that $g(k)$ is the Fourier transform of the initial state and:
 \begin{itemize}
     \item A free particle can have any positive energy $E$.
     \item There is no free particle with a definite energy.
-    \item $\frac{1}{\sqrt{2\pi}}\phi(k)dk$ plays the role of $c_n$ from the discrete superposition case.
+    \item $\frac{1}{\sqrt{2\pi}}g(k)dk$ plays the role of $c_n$ from the discrete superposition case.
     \item Separable solutions do not represent physical states, therefore $\notin$ Hilbert space.
     \item The particle carries a range of $k$
 \end{itemize}
@@ -267,7 +267,7 @@ For an arbitrary state $n$ the next state is given by
 
 \begin{align*}
     \psi_{1}(x) & ={\left(\frac{m\omega}{\pi\hbar}\right)}^{\frac{1}{4}}\sqrt{\frac{2m\omega}{\hbar}}xe^{-\left(\frac{m\omega}{2\hbar}\right)x^{2}}                    \\
-    \psi_{2}(x) & =\frac{1}{\sqrt{2}}\Big(\frac{m\omega}{\pi\hbar}\Big)^{\frac{1}{4}}\Big(\frac{2m\omega}{\hbar}x^{2}-1\Big)e^{-\Big(\frac{m\omega}{2\hbar}\Big)x^{2}}
+    \psi_{2}(x) & =\frac{1}{\sqrt{2}}{\Big(\frac{m\omega}{\pi\hbar}\Big)}^{\frac{1}{4}}\Big(\frac{2m\omega}{\hbar}x^{2}-1\Big)e^{-\Big(\frac{m\omega}{2\hbar}\Big)x^{2}}
 \end{align*}
 
 \ptitle{Hermite Polynomial Form}
