--- a/src/sections/04_Atoms_Solids.tex
+++ b/src/sections/04_Atoms_Solids.tex
@@ -254,7 +254,7 @@ The exchange symmetry of the overall wave function of
 One cannot have two electrons in exactly the same state (same quantum numbers) and still have the system antisymmetric w.r.t.\ exchange because if both were in the same state then
 \begin{align*}
     a        & =b           \\
-    \uparrow & = \downarrow % TBD: Stimmt das? (Aus Übungsstunde. Sieht etwas wild aus, macht aber schon Sinn (gleiches Prinzip wie bei \psi{-}))
+    \uparrow & = \downarrow % TODO: Stimmt das? (Aus Übungsstunde. Sieht etwas wild aus, macht aber schon Sinn (gleiches Prinzip wie bei \psi{-}))
 \end{align*}
 i.e.\ either $\chi_{\mathrm{singlet}}(s)$ or $\psi_{-}$ would become $0$ in the overall fermion wave function i.e.\ there is no such state.\\
 Another explanation is that the only function that changes sign (required for fermions) \textit{and} stays the same (because both electrons are in the same state) when swapping the particles is the zero function.
@@ -548,7 +548,7 @@ and each solution occupies
     \frac{\pi^3}{l_x l_y l_z}=\frac{\pi^3}{V}
 \end{equation*}
 of k-space.
-% TBD: where did the n_{x}, n_{y} ... go?
+% TODO: where did the n_{x}, n_{y} ... go? -> using k from now on
 
 \subsubsection{Fermi Energy}
 For electrons (fermions), the energy levels are filled with 2 $e^-$ at each level, and the highest occupied level is called the \textbf{Fermi level}.
